--- a/compiler.cabal
+++ b/compiler.cabal
@@ -16,9 +16,17 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable compiler
-  main-is:             src/Main.hs
+  main-is:             Main.hs
   -- other-modules:       
   other-extensions:    RankNTypes, ScopedTypeVariables, StandaloneDeriving, GADTs, FlexibleContexts, Rank2Types, ImpredicativeTypes
-  build-depends:       base >=4.6 && <4.7, process >=1.1 && <1.2, mtl >=2.1 && <2.2
+  build-depends:       base == 4.*, process >=1.1 && <1.2, mtl >=2.1 && <2.2
   hs-source-dirs:      src
+  default-language:    Haskell2010
+
+test-suite spec
+  main-is:             Spec.hs
+  type:                exitcode-stdio-1.0
+  ghc-options:         -Wall
+  hs-source-dirs:      test
+  build-depends:       base == 4.*, hspec == 2.*
   default-language:    Haskell2010
