--- a/compiler.cabal
+++ b/compiler.cabal
@@ -21,9 +21,8 @@ executable compiler
   other-extensions:    RankNTypes, ScopedTypeVariables, StandaloneDeriving, GADTs, FlexibleContexts, Rank2Types, ImpredicativeTypes
   build-depends:       QuickCheck >= 2.6
                      , base == 4.*
-                     , mtl >=2.1 && <2.2
-                     , process >=1.1 && <1.2
-                     , random >= 1.0.1.1
+                     , mtl >=2.1
+                     , process >=1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
 
