--- a/compiler.cabal
+++ b/compiler.cabal
@@ -23,6 +23,7 @@ executable compiler
                      , base == 4.*
                      , mtl >=2.1
                      , process >=1.1
+                     , transformers >= 0.4
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -35,4 +36,5 @@ test-suite spec
                      , base == 4.*
                      , hspec == 2.*
                      , random >= 1.0.1.1
+                     , transformers >= 0.4
   default-language:    Haskell2010
